packages/nginx_ingress_controller/data_stream/access/_dev/deploy/k8s/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  demo
  namespace: default
  labels:
    app:  demo
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  demo
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  demo
        image:  nginx:1.23.1-alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  http
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Europe/London
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: default
spec:
  selector:
    app: demo
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: demo
    protocol: TCP
    port: 8080
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 8080
---
apiVersion: networking.k8s.io/v1                                                                                                                                                                                   
kind: Ingress                                                                                                                                                                                                      
metadata:                                                                                                                                                                                                          
  name: demo-localhost                                                                                                                                                                                             
  namespace: default                                                                                                                                                                                               
spec:                                                                                                                                                                                                              
  ingressClassName: nginx                                                                                                                                                                                          
  rules:                                                                                                                                                                                                           
  - host: demo.localdev.me                                                                                                                                                                                         
    http:                                                                                                                                                                                                          
      paths:                                                                                                                                                                                                       
      - backend:                                                                                                                                                                                                   
          service:                                                                                                                                                                                                 
            name: demo                                                                                                                                                                                             
            port:                                                                                                                                                                                                  
              number: 80                                                                                                                                                                                           
        path: /                                                                                                                                                                                                    
        pathType: Prefix
